@@ -14,7 +14,7 @@ from PyQt4.QtTest import QTest
 
 import qutepart
 
-sys.path.insert(0, os.path.abspath('..'))
+sys.path.insert(0, os.path.join(os.path.abspath(os.path.dirname(__file__)), ".."))
 
 import enki.core.defines
 enki.core.defines.CONFIG_DIR = '/tmp'
@@ -41,6 +41,8 @@ def in_main_loop(func, *args):
             try:
                 func(*args)
             finally:
+                while self.app.hasPendingEvents():
+                    self.app.processEvents()
                 self.app.quit()
         
         QTimer.singleShot(0, execWithArgs)
@@ -59,6 +61,9 @@ class TestCase(unittest.TestCase):
     
     TEST_FILES_DIR = '/tmp/enki-tests/'
     
+    EXISTING_FILE = TEST_FILES_DIR + 'existing_file.txt'
+    EXISTING_FILE_TEXT = 'hi\n'
+    
     def _cleanUpFs(self):
         if os.path.isfile('/tmp/enki.json'):
             os.unlink('/tmp/enki.json')
@@ -70,6 +75,8 @@ class TestCase(unittest.TestCase):
     def setUp(self):
         self._cleanUpFs()
         os.mkdir(self.TEST_FILES_DIR)
+        with open(self.EXISTING_FILE, 'w') as f:
+            f.write(self.EXISTING_FILE_TEXT)
         
         core.init(None)
         
@@ -79,6 +86,9 @@ class TestCase(unittest.TestCase):
                 core.workspace().currentDocument().qutepart.text = self.NOT_SAVED_DOCUMENT_TEXT
     
     def tearDown(self):
+        for document in core.workspace().documents():
+            document.qutepart.text = ''  # clear modified flag, avoid Save Files dialog
+        
         core.workspace().closeAllDocuments()
         core.term()
         self._cleanUpFs()
@@ -86,7 +96,6 @@ class TestCase(unittest.TestCase):
     def _findDialog(self):
         for widget in self.app.topLevelWidgets():
             if widget.isVisible() and isinstance(widget, QDialog):
-                QTest.qWaitForWindowShown(widget)
                 return widget
         else:
             self.fail("Dialog not found")
@@ -95,7 +104,7 @@ class TestCase(unittest.TestCase):
         """Open dialog by executing ``openDialogFunc`` and run ``runInDialogFunc``.
         Dialog is passed as a parameter to ``runInDialogFunc``
         """
-        QTimer.singleShot(0, lambda: runInDialogFunc(self._findDialog()))
+        QTimer.singleShot(100, lambda: runInDialogFunc(self._findDialog()))
         openDialogFunc()
 
     def openSettings(self, runInDialogFunc):
