@@ -1,3 +1,6 @@
+Aug 25 2013
+    Rename files from Enki, make scripts executable
+
 Aug 23 2013
     Open terminal action
 
